# mcorcode

./: .gitignore  .mcorcode.toml.example  Cargo.toml
examples/: agent_with_tools.rs  full_agent_flow.rs  memory_example.rs  simple_chat.rs  stream_chat.rs
src/: lib.rs  main.rs
src/agent/: base.rs  core.rs  executor.rs  function_calling.rs  mod.rs  session.rs  types.rs
src/agent/graph/: builder.rs  mod.rs  nodes.rs  router.rs  state.rs
src/callbacks/: base.rs  mod.rs  run_tree.rs
src/callbacks/handlers/: file.rs  mod.rs  stdout.rs
src/cli/: args.rs  mod.rs  repl.rs
src/common/: config.rs  mod.rs
src/config/: loader.rs  mod.rs  settings.rs
src/context/: manager.rs
src/hooks/: action.rs  mod.rs  system.rs  trigger.rs
src/llm/: anthropic.rs  client.rs  message.rs  mod.rs  openai.rs  streaming.rs  types.rs
src/llm/providers/: config.rs  manager.rs  mod.rs  provider.rs
src/memory/: base.rs  buffer.rs  history.rs  mod.rs  summary.rs  window.rs
src/permission/: checker.rs  mod.rs  mode.rs  policy.rs
src/prompts/: chat_template.rs  mod.rs  system.rs  template.rs
src/schema/: document.rs  message.rs  mod.rs  output.rs
src/session/: history.rs  manager.rs  mod.rs  state.rs
src/tools/: base.rs  bash.rs  definition.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src/utils/: error.rs  mod.rs
tests/: integration_tests.rs
tests/integration/: api_test.rs  mod.rs
tests/unit/: mod.rs
tests/unit/agent/: executor.rs  function_calling.rs  mod.rs  state.rs
tests/unit/callbacks/: mod.rs  run_tree.rs
tests/unit/config/: mod.rs  settings.rs
(+31 files in other folders)
